# cpp-studies

./: CMakeLists.txt  Diagram bez tytułu.drawio  IO  Untitled Diagram.drawio
LAB2/: CMakeLists.txt  Untitled Diagram.drawio
LAB2/simpleCalc/: CMakeLists.txt
LAB3/: CMakeLists.txt
LAB3/ZADANIE1/: main.cpp
LAB3/ZADANIE10/: main.cpp
LAB3/ZADANIE2/: main.cpp
LAB3/ZADANIE3/: main.cpp
LAB3/ZADANIE4/: main.cpp
LAB3/ZADANIE5/: main.cpp
LAB3/ZADANIE6/: main.cpp
LAB3/ZADANIE7/: main.cpp
LAB3/ZADANIE8/: main.cpp
LAB3/ZADANIE9/: main.cpp
LAB4/: CMakeLists.txt
LAB4/ZADANIA1-4 _ LAB4/: main.cpp
LAB4/ZADANIA13-14_LAB4/: main.cpp
LAB4/ZADANIA15-19_LAB4/: main.cpp
LAB4/ZADANIA5-12_LAB4/: main.cpp
LAB5/: CMakeLists.txt
LAB6/: CMakeLists.txt
LAB6/FRIENDLY_FUNCTIONS/include/: Node.h
LAB6/FRIENDLY_FUNCTIONS/src/: Node.cpp  main.cpp
LAB6/OPERATORS/include/: Vector.h
LAB6/OPERATORS/src/: Vector.cpp  main.cpp
LAB6/VECTOR/include/: Vector.h
LAB6/VECTOR/src/: Vector.cpp  main.cpp
LAB7/: CMakeLists.txt
LAB7/DZIEDZICZENIE/: main.cpp
LAB7/POLIMORFIZM/: main.cpp
LAB7/POLIMORFIZM/include/: Circle.h  Figure.h  Rectangle.h
LAB7/POLIMORFIZM/src/: Circle.cpp  Rectangle.cpp  main.cpp
LAB8/: CMakeLists.txt
LAB9/: CMakeLists.txt
PROJEKT/: CMakeLists.txt
PROJEKT2/: CMakeLists.txt
PROJEKT2/database/: przepisy.csv
PROJEKT2/include/: App.h  Calories.h  Components.h  Methods.h  Times.h  Titles.h
PROJEKT2/src/: App.cpp  Calories.cpp  Components.cpp  Methods.cpp  Times.cpp  Titles.cpp  main.cpp
TEST/: CMakeLists.txt  main.cpp
allocation_basics/: CMakeLists.txt  main.cpp
(+38 files in other folders)
